null value fix